# AutoCore

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CodeQuality.cmake
examples/: bms_example.cpp
scripts/: pre-commit  setup.sh
src/core/adas/: adas_manager.hpp  decision_maker.hpp  path_planner.hpp  perception_system.cpp  perception_system.hpp
src/core/autonomous/: autonomous_manager.hpp  autonomous_types.hpp  types.hpp
src/core/bms/: battery_manager.cpp  battery_manager.hpp  battery_state.cpp  battery_state.hpp  thermal_manager.cpp  thermal_manager.hpp
src/core/common/: types.hpp
src/core/diagnostics/: can_bus_monitor.cpp  can_bus_monitor.hpp  component_health.hpp  diagnostic_data.hpp  diagnostic_manager.hpp  diagnostic_types.hpp  fault_detector.cpp  fault_detector.hpp  health_monitor.hpp
src/core/localization/: localization_system.hpp
src/core/ml/: anomaly_detector.hpp  model_config.hpp
src/core/motor/: inverter_controller.hpp  motor_controller.cpp  motor_controller.hpp  motor_state.hpp
src/core/sensors/: calibration_manager.hpp  fusion_engine.hpp  fusion_types.hpp  kalman_filter.hpp  map.hpp  position.hpp  preprocessor.cpp  preprocessor.hpp  sensor.hpp  sensor_data.hpp  sensor_manager.hpp  sensor_types.hpp  slam_engine.hpp
src/core/telematics/: cloud_connector.hpp  gps_navigator.hpp  mqtt_client.hpp  ota_manager.cpp  ota_manager.hpp  security_manager.hpp  telematics_manager.hpp  telematics_types.hpp
src/tests/: adas_test.cpp  autonomous_test.cpp  behavior_planner_test.cpp  diagnostics_test.cpp  mock_cloud_service.hpp  mock_components.hpp  motor_controller_test.cpp  sensor_integration_test.cpp  telematics_test.cpp  vehicle_control_system_test.cpp
(+11 files in other folders)
